podover.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  namespace: dev
  labels:
    name: myapp1
spec:
  containers:
  - name: myapp1
    image: nginx
    resources:
      limits:
        memory: "800Mi"
        cpu: 2
    ports:
      - containerPort: 80
