podq.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: dev
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        memory: "800Mi"
        cpu: "800m"
    ports:
      - containerPort: 80
