statefullapp.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx 
  ports:
  - port: 80
    name: web 
  clusterIP: None 
  selector:
    app: nginx 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web 
spec:
  selector:
    matchLabels:
      app: nginx 
  serviceName: "nginx"
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: myapp
        image: registry.k8s.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
      volumes: 
      - name: www
        persistentVolumeClaim:
          claimName: state-pv-claim
